[tool.poetry]
name = "epimodel"
version = "0.2"
description = "EpidemicForecasting.org Countermeasures Modelling Repo"
authors = ["Mrinank Sharma <mrinank@robots.ox.ac.uk>"]
packages = [
    { include = "epimodel" },
]

[tool.poetry.dependencies]
python = ">=3.6.9"
numpy = "^1.18.2"
pandas = "^1.0.3"
requests = "^2.23"

# Optional inference toolkits
jupyter = { version = "^1.0.0", optional = true }
pymc3 = { version = "^3.8", optional = true }
seaborn = { version = "^0.10.0", optional = true }
tqdm = "^4.45.0"
graphviz = "^0.13.2"
jupyterlab = "^2.1.1"
nbdime = "^2.0.0"
pyreadr = "^0.2.9"

[tool.poetry.extras]
pymc3 = ["pymc3", "jupyter", "seaborn"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 88
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

