[tool.poetry]
name = "epimodel"
version = "0.2"
description = "EpidemicForecasting.org Countermeasures Modelling Repo"
authors = ["Mrinank Sharma <mrinank@robots.ox.ac.uk>"]
packages = [
    { include = "epimodel" },
]

[tool.poetry.dependencies]
python = ">=3.6.9"
numpy = "^1.18.2"
pandas = "^1.0.3"
requests = "^2.23"

# Optional inference toolkits
jupyter = "^1.0.0"
pymc3 = "^3.9"
seaborn = "^0.10.0"
tqdm = "^4.45.0"
graphviz = "^0.13.2"
jupyterlab = "^2.1.1"
nbdime = "^2.0.0"
pyreadr = "^0.2.9"
sklearn = "^0.0"
sphinx = "^3.2.1"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 88
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

