[tool.poetry]
name = "epimodel"
version = "0.2"
description = "EpidemicForecasting.org Countermeasures Modelling Repo"
authors = ["Mrinank Sharma <mrinank@robots.ox.ac.uk>"]
packages = [
    { include = "epimodel" },
]

[tool.poetry.dependencies]
python = ">=3.6.9"
numpy = "^1.18.2"
pandas = "^1.0.3"
requests = "^2.23"

# Optional inference toolkits
jupyter = "^1.0.0"
pymc3 = "^3.9"
arviz = "<0.11"
seaborn = "^0.10.0"
tqdm = "^4.45.0"
graphviz = "^0.13.2"
jupyterlab = "^2.1.1"
nbdime = "^2.0.0"
pyreadr = "^0.2.9"
sklearn = "^0.0"
pyyaml = "^5.3.1"
sphinx = {version = "^3.2.1", extras = ["documentation"]}
sphinx-argparse = {version = "^0.2.5", extras = ["documentation"]}
nbsphinx = {version = "^0.7.1", extras = ["documentation"]}
sphinx_rtd_theme = {version = "^0.5.0", extras = ["documentation"]}
pandoc = {version = "^1.0.2", extras = ["documentation"]}
pypandoc = {version = "^1.5", extras = ["documentation"]}



[tool.poetry.extras]
documentation = ["sphinx^3.2.1", "sphinx-argparse^0.2.5", "sphinxcontrib-autoyaml^0.5.0", "nbsphinx^0.7.1", "sphinx_rtd_theme^0.5.0", "pypandoc^1.5"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 88
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

